samples/_failures_safe/1761088896_618d35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3931ed0e.c: In function ‘main’:
./samples/SAFE/__tmp_3931ed0e.c:135:23: error: ‘read’ undeclared (first use in this function); did you mean ‘fread’?
  135 |     int entry_count = read
      |                       ^~~~
      |                       fread
./samples/SAFE/__tmp_3931ed0e.c:135:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_3931ed0e.c:135:5: error: expected ‘,’ or ‘;’ at end of input
  135 |     int entry_count = read
      |     ^~~
./samples/SAFE/__tmp_3931ed0e.c:135:5: error: expected declaration or statement at end of input
